[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainCode.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Show_full_list" type="Button" parent="."]
margin_left = 320.0
margin_top = 248.0
margin_right = 593.0
margin_bottom = 334.0
text = "apareca lista preenchida"

[node name="Full_list" type="Label" parent="."]
margin_left = 317.0
margin_top = 159.0
margin_right = 586.0
margin_bottom = 245.0

[node name="Digite_dados" type="LineEdit" parent="."]
margin_left = 321.0
margin_top = 247.0
margin_right = 588.0
margin_bottom = 331.0
text = "Escreva dados"
align = 1

[node name="Dados_digitados" type="Label" parent="."]
margin_left = 675.0
margin_top = 157.0
margin_right = 937.0
margin_bottom = 242.0

[node name="Digite_texto" type="LineEdit" parent="."]
margin_left = 323.0
margin_top = 246.0
margin_right = 562.0
margin_bottom = 328.0
text = "Escreva um texto"
align = 1

[node name="Aparece_texto" type="Label" parent="."]
margin_left = 331.0
margin_top = 147.0
margin_right = 568.0
margin_bottom = 244.0

[node name="Digite_numero" type="LineEdit" parent="."]
margin_left = 267.0
margin_top = 247.0
margin_right = 643.0
margin_bottom = 363.0
text = "Insira n√∫mero, farei ele duplicar"
align = 1

[node name="Aparece_numero" type="Label" parent="."]
margin_left = 269.0
margin_top = 147.0
margin_right = 642.0
margin_bottom = 247.0

[node name="Butao_Lista" type="Button" parent="."]
margin_left = 269.0
margin_top = 389.0
margin_right = 663.0
margin_bottom = 566.0
text = "OK"

[node name="Butao_dados_cont" type="Button" parent="."]
margin_left = 626.0
margin_top = 383.0
margin_right = 1020.0
margin_bottom = 560.0
text = "Mais dados na lista"

[node name="Butao_dados_OK" type="Button" parent="."]
margin_left = 51.0
margin_top = 383.0
margin_right = 445.0
margin_bottom = 560.0
text = "Ta bom de dado, me mostre a lista."

[node name="Butao_texto" type="Button" parent="."]
margin_left = 269.0
margin_top = 389.0
margin_right = 663.0
margin_bottom = 566.0
text = "OK"

[node name="Butao_numero" type="Button" parent="."]
margin_left = 269.0
margin_top = 388.0
margin_right = 663.0
margin_bottom = 565.0
text = "OK"

[connection signal="pressed" from="Butao_Lista" to="." method="_on_Butao_Lista_pressed"]
[connection signal="pressed" from="Butao_dados_cont" to="." method="_on_Butao_dados_cont_pressed"]
[connection signal="pressed" from="Butao_dados_OK" to="." method="_on_Butao_dados_OK_pressed"]
[connection signal="pressed" from="Butao_texto" to="." method="_on_Butao_texto_pressed"]
[connection signal="pressed" from="Butao_numero" to="." method="_on_Butao_numero_pressed"]
